Recently improved tests made jdk8 compatible